# tdmpc2

./: .gitignore  README.md  pyproject.toml
requirements/: requirements.lock.txt  requirements.txt
slurm/: setup.sh  start_interactive_job.sh  train_manipulator_bring_ball.sh  train_manipulator_bring_peg.sh  train_manipulator_bring_peg_custom.sh  train_manipulator_insert_ball.sh  train_manipulator_insert_peg.sh
tdmpc2/: config.yaml  env_config.py  evaluate.py  logging_config.py  tdmpc2.py  tdmpc2_model.py  train.py
tdmpc2/common/: __init__.py  buffer.py  logger.py  world_model.py
tdmpc2/envs/: __init__.py  dmcontrol.py  mujoco.py
tdmpc2/envs/tasks/: cheetah.py  hopper.py  manipulator.py
tdmpc2/envs/wrappers/: tensor.py  vectorized.py
tdmpc2/trainer/: base.py  offline_trainer.py  online_trainer.py
