[project]
name = "tdmpc2"
version = "0.1.0"
description = "TD-MPC2 integration"
requires-python = ">=3.12"

dependencies = [
    "torch==2.7.1",
    "torchvision",
    "tensordict-nightly==2025.1.1",
    "torchrl-nightly==2025.1.1",
    "gymnasium",
    "dm-control",
    "mujoco",
    "numpy",
    "pandas",
    "tqdm",
    "hydra-core",
    "omegaconf",
    "wandb",
    "imageio",
    "imageio-ffmpeg",
    "moviepy",
    "glfw",
    "h5py",
    "termcolor",
    "hydra-submitit-launcher",
]