[project]
name = "tdmpc2"
version = "1.0.0"
description = "TD-MPC2 integration"
requires-python = ">=3.12"

dependencies = [
    "torch==2.7.1",
    "torchvision==0.22.1",
    "pandas==2.3.3",
    "imageio-ffmpeg==0.6.0",
    "wandb==0.24.1",
    "tensordict-nightly==2025.1.1",
    "torchrl-nightly==2025.1.1",
    "dm-control==1.0.16",
    "glfw==2.7.0",
    "gymnasium==1.1.1",
    "ffmpeg==1.4",
    "imageio==2.34.1",
    "h5py==3.11.0",
    "hydra-core==1.3.2",
    "hydra-submitit-launcher==1.2.0",
    "submitit==1.5.1",
    "omegaconf==2.3.0",
    "moviepy==1.0.3",
    "mujoco==3.1.2",
    "numpy==1.26.4",
    "kornia==0.7.2",
    "termcolor==2.4.0",
    "tqdm==4.66.4",
]


[tool.setuptools]
packages = ["tdmpc2"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"